custom queue implementation